# master_project

./: .gitignore  README.md  clean_log.json  odom_plot.py  odometry.csv  readme.txt  waypoints.py
vrx_gz/config/: catamaran.yaml
vrx_gz/launch/: simple.launch.py  spawn_config.launch.py  usv_joy_teleop.py
vrx_gz/log/: latest_list
vrx_gz/src/vrx_gz/: launch.py  model.py  payload_bridges.py
vrx_gz/worlds/: simple_grid.sdf
vrx_nav2/: CMakeLists.txt  package.xml
vrx_nav2/config/: ekf_filter_node.yaml  ekf_localization.yaml  ekf_navsat_params.yaml  nav2_params.yaml  navsat_transform.yaml
vrx_nav2/launch/: localization.launch.py  vrx_nav2.launch.py
vrx_nav2/scripts/: dual_usv_controller.py  odometry_node.py  set_datum.py
vrx_ros/src/: cmd_vel_transform.py  solar_grid.yaml  thruster_bridge.py
vrx_ros/src/solar_grid/: grid_properties.txt  solar_grid.pgm  solar_grid.yaml  solar_grid_inv.pgm  solar_grid_upright.pgm
vrx_urdf/: grid_test.world  test.world
vrx_urdf/catamaran_description/: read_me.txt
vrx_urdf/catamaran_description/custom_wamv/: example_component_config.xacro  example_component_config.yaml  example_thruster_config.xacro  example_thruster_config.yaml  readme.txt  wamv_target.sdf  wamv_target.urdf
vrx_urdf/catamaran_description/models/catamaran/: dimensions_catamaran.txt  model (copy).sdf  model.config  model.sdf  model.txt  model_orig.sdf  (+1 more)
vrx_urdf/catamaran_description/urdf/: catamaran.urdf  catamaran.urdf.xacro  catamaran.xacro
vrx_urdf/custom_addons/: example_component_config.xacro  example_component_config.yaml  wamv_target.sdf  wamv_target.urdf
vrx_urdf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
vrx_urdf/log/: latest_build
vrx_urdf/solar_grid/urdf/: solar_grid.xacro
vrx_urdf/wamv_description/urdf/: wamv_base.urdf.xacro
(+27 files in other folders)
